gathered all landing actions (4 in sum) in one controller, temporarily named AdminController

--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
@@ -2,7 +2,7 @@
 
 <div class="left_navigation">
     <div class="website_logo">
-        <a href="{{path('user_admin_page')}}">
+        <a href="{{path('admin')}}">
         </a>
     </div>
 
