Removing mobile bundle

--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
@@ -1,4 +1,8 @@
-{% include "MembersManagementBundle:Admin:header_dialogs.html.twig" %} 
+<div class="header_dialogs">
+    <div class="categories_dialog" style="display:none">
+        {% include "ShopManagementBundle:Category:AllCategoriesForHeader.html.twig" %}
+    </div>
+</div>
 
 <div class="left_navigation">
     <div class="website_logo">
