Refactoring search code

--- a/src/Members/Bundle/ManagementBundle/Resources/views/search.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/search.html.twig
@@ -1,7 +1,7 @@
 <form id="search-form" 
       class="searchbar-form" 
       method="post" 
-      action="{{path('site_search')}}"
+      action="{{path('search')}}"
       >      
 	<input type="text" 
                class="search-keyword" 
