--- a/src/Members/Bundle/ManagementBundle/Resources/views/Resetting/reset_content.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Resetting/reset_content.html.twig
@@ -3,7 +3,7 @@
 <div class="wrapper">
     <div class="container">
         <form id="reset_reset_form"
-              action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} 
+              action="{{ path('fos_user_resetting_reset', {'token': token}) }}"
               method="POST" 
               class="fos_user_resetting_reset">
                 {{ form_widget(form.plainPassword.first, { 'attr': { 'placeholder' : 'resetting.enter_new_password'|trans } }) }}
