--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Resetting/reset_content.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Resetting/reset_content.html.twig
@@ -2,7 +2,7 @@
 
 <div id="mobile-container">
     <form id="reset_reset_form"
-          action="{{ path('mobile_fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} 
+          action="{{ path('mobile_fos_user_resetting_reset', {'token': token}) }}"
           method="POST" 
           class="fos_user_resetting_reset">
             {{ form_widget(form.plainPassword.first, { 'attr': { 'placeholder' : 'resetting.enter_new_password'|trans } }) }}
