--- a/src/FrontEnd/scss/dashboard_styles/dashboard_add_new_item.scss
+++ b/src/FrontEnd/scss/dashboard_styles/dashboard_add_new_item.scss
@@ -55,8 +55,14 @@ $rouge: #c1272d;
 {
     width:40%;
     height:100%;
+    float:left;
 }
-
+#price_label
+{
+    padding: 6px;
+    font-size: 14px;
+    float:left;
+}
 
 #form-content-widget
 {
@@ -95,10 +101,11 @@ $rouge: #c1272d;
 {
     color: darkgray;
     font: 12px Arial;
-    margin: 16px 10px 0px 16px;
+    margin: 25px 6px 0px 2px;
     display: inline;
-    width: 80px;
+    width: 120px;
     float: left;
+    text-align: center;
 }
 #add_image
 {
@@ -120,6 +127,17 @@ a#add_image_trigger
     float: left;
 }
 
+#add_image_notice
+{
+    font-size: 9px;
+    line-height: 9px;
+    color: red;
+    width: 200px;
+    float: left;
+    margin-left: 7px;
+    margin-top: 22px;
+
+}
 
 a#add_image_trigger:hover
 {
