--- a/src/FrontEnd/scss/mobile_styles/mobile_other/mobile_item_show.scss
+++ b/src/FrontEnd/scss/mobile_styles/mobile_other/mobile_item_show.scss
@@ -37,7 +37,7 @@ $vert-opace7:rgba(0,98,51,0.7);
 #post-title
 {
     margin: 0;
-    max-width: 71%;
+    max-width: 52%;
     float: left;
     padding: 5px 0 0 5px;
     font-size: 20px;
@@ -52,6 +52,7 @@ $vert-opace7:rgba(0,98,51,0.7);
    margin:5px 5px 0 0;
    background: rgba(241, 241, 241, 0.65);
    border-radius: 8px;
+    height: 80px;
 }
 
 #post-price
@@ -89,6 +90,7 @@ $vert-opace7:rgba(0,98,51,0.7);
     margin:5px;
     font-size:14px;
     min-height: 150px;
+    background: rgba(241, 241, 241, 0.65);
 }
 
 
