HF53, changed round radius border, added enctyp=multipart again

--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Post/new.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Post/new.html.twig
@@ -3,7 +3,8 @@
       action="{{ path('post_creates')}}"
       data-iu-url="{{ path('image_uploads')}}"
       data-id-url="{{ path('image_deletes')}}"
-      method="post" 
+      method="post"
+      enctype="multipart/form-data"
       novalidate>
     <div id="item-form-top">
         <div id="form-categories-error" class="error-theme">{{ form_errors(form.categories) }}</div>
