--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileEdits.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileEdits.html.twig
@@ -5,6 +5,7 @@
         data-iu-url="{{ path('image_uploads')}}" 
         data-id-url="{{ path('image_deletes')}}"
         method="post"
+          enctype="multipart/form-data"
         novalidate>
 
         <div id="item-form-top">
