--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileNew.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileNew.html.twig
@@ -4,7 +4,8 @@
           action="{{ path('mobile_item_creates')}}" 
           data-iu-url="{{ path('image_uploads')}}" 
           data-id-url="{{ path('image_deletes')}}"
-          method="post" 
+          method="post"
+          enctype="multipart/form-data"
           novalidate>
         <div id="item-form-top">
             <div id="form-categories-error" class="error-theme">{{ form_errors(form.categories) }}</div>
