--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Post/edit.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Post/edit.html.twig
@@ -4,6 +4,7 @@
     data-iu-url="{{ path('image_uploads')}}" 
     data-id-url="{{ path('image_deletes')}}"
     method="post"
+      enctype="multipart/form-data"
     novalidate>
     
     <div id="item-form-top">
