--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/dashboardTemplates.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/dashboardTemplates.html.twig
@@ -2,12 +2,12 @@
     <div class="one_photo" id="<%:image_id%>">
         <div class="image_div <%if widthVsHeight===2%>center-horizontally<%/if%>">
             <%if widthVsHeight===0%>
-                <img class="photo" src="{{asset('uploads/')}}<%:uploadedURL%>"/>
+                <img class="photo" src="<%:uploadedURL%>"/>
             <%else widthVsHeight===1%>
                 <span class="helper"></span>
-                <img class="photo faty" src="{{asset('uploads/')}}<%:uploadedURL%>"/>
+                <img class="photo faty" src="<%:uploadedURL%>"/>
             <%else widthVsHeight===2%>
-                <img class="photo tall" src="{{asset('uploads/')}}<%:uploadedURL%>"/>
+                <img class="photo tall" src="<%:uploadedURL%>"/>
             <%/if%>
         </div>
         <div class="image_controls">
