reparing links after integration of Gauffrette F01

--- a/src/Members/Bundle/ManagementBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Profile/edit_content.html.twig
@@ -9,7 +9,7 @@
 {{ form_widget(form) }}
       
     <div class="profile_picture">
-         <img class="photo"  src="{{ asset(profile_url) }}" width="60"/>
+         <img class="photo"  src="{{ prefix ~ profile_url }}" width="60"/>
          <input type="file" id="fos_user_profile_form_profile_picture" name="fos_user_profile_form[profile_picture]" required="required" class="chooser">
          <a href="#">Click me to choose a file</a>
       </div>      
