--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Profile/edit_content.html.twig
@@ -6,10 +6,10 @@
       data-iu-url="{{ path('update_profile_picture', { 'user_id': user.id })}}"  
       novalidate>
       {{ form_errors(form) }}
-{{ form_widget(form) }}
+      {{ form_widget(form) }}
       
     <div class="profile_picture">
-         <img class="photo"  src="{{ asset(profile_url) }}" width="60"/>
+         <img class="photo"  src="{{ prefix ~ profile_url }}" width="60"/>
          <input type="file" id="fos_user_profile_form_profile_picture" name="fos_user_profile_form[profile_picture]" required="required" class="chooser">
          <a href="#">Click me to choose a file</a>
       </div>      
