--- a/src/Shop/Bundle/ManagementBundle/Resources/views/External/External.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/External/External.html.twig
@@ -15,7 +15,7 @@
 {% for entity in entities %}
    <div class="my_article" id="{{entity.id}}">
        <a href="javascript:void(0);" class="show_article_trigger" data-show-url="{{path('post_show',{ 'id': entity.id})}}" >
-          <img src="{{asset(entity.postMainImagePath)}}" height= 25/>
+          <img src="{{ prefix ~  entity.postMainImagePath }}" height= 25/>
         </a>
     </div>
 {% endfor %}
