--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
@@ -37,7 +37,7 @@
                             ~uploadDate|date('d')~'/'
                             ~uploadDate|date('H')~'/'~'m_'
                             ~entity.postMainImagePath.path %}
-        <img class="mobile_image" src="{{ asset(image_url) }}">
+        <img class="mobile_image" src="{{ prefix ~ image_url }}">
     </div>    
     <div id="post-images">
         {% for image in entity.images %}
@@ -49,7 +49,7 @@
                     ~uploadDate|date('d')~'/'
                     ~uploadDate|date('H')~'/'~'m_'
                     ~image.path %}
-                <img class="mobile_image" src="{{ asset(image_url) }}"/>
+                <img class="mobile_image" src="{{ prefix ~ image_url }}"/>
             </div>
             {%endif%}
         {% endfor %}
@@ -72,12 +72,12 @@
                             ~createdAt|date('m')~'/'
                             ~entity.user.getProfilePicture.path %}
                             {% if entity.user.getProfilePicture.widthVsHeight == 0 %}
-                            <img class="photo equal" src="{{ asset(image_url) }}"/>
+                            <img class="photo equal" src="{{ prefix ~ image_url }}"/>
                             {% elseif entity.user.getProfilePicture.widthVsHeight == 1 %}
                             <span class="helper"></span>
-                            <img class="photo fat-profile-image" src="{{ asset(image_url) }}"/>
+                            <img class="photo fat-profile-image" src="{{ prefix ~ image_url }}"/>
                             {% elseif entity.user.getProfilePicture.widthVsHeight == 2 %}
-                            <img class="photo tall-profile-image" src="{{ asset(image_url) }}"/>
+                            <img class="photo tall-profile-image" src="{{ prefix ~ image_url }}"/>
                             {% endif%}
                     </div>
                     {%else%}
