--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
@@ -13,12 +13,12 @@
                 ~createdAt|date('m')~'/'
                 ~user.getProfilePicture.path %}
                 {% if user.getProfilePicture.widthVsHeight == 0 %}
-                <img class="photo equal-profile-image"  src="{{ asset(image_url) }}"/>
+                <img class="photo equal-profile-image"  src="{{ prefix ~ image_url }}"/>
                 {% elseif user.getProfilePicture.widthVsHeight == 1 %}
                 <span class="helper"></span>
-                <img class="photo fat-profile-image"  src="{{ asset(image_url) }}"/>
+                <img class="photo fat-profile-image"  src="{{ prefix ~ image_url }}"/>
                 {% elseif user.getProfilePicture.widthVsHeight == 2 %}
-                <img class="photo tall-profile-image"  src="{{ asset(image_url) }}"/>
+                <img class="photo tall-profile-image"  src="{{ prefix ~ image_url }}"/>
                 {% endif%}
         </div>        
     {% else %}
