--- a/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
@@ -48,6 +48,9 @@
         <div id="center">
             {% include "MembersManagementBundle:HomePageInitial:HomePageCenterInitial.html.twig" %}
         </div>
+        <div id="progress_center">
+            <img src="{{ asset('images/loading.gif')}}" />
+        </div>
     </div>
     <div id="right_container">
         <div id="right_progress">
@@ -55,6 +58,9 @@
         </div>
         <div id="right">
             {% include "MembersManagementBundle:HomePageInitial:HomePageRightInitial.html.twig" %}
+        </div>
+        <div id="progress_right">
+            <img src="{{ asset('images/loading.gif')}}" />
         </div>
     </div>
     
