--- a/src/FrontEnd/scss/homepage_styles/homepage_styles_main.scss
+++ b/src/FrontEnd/scss/homepage_styles/homepage_styles_main.scss
@@ -91,14 +91,14 @@ a
 #left_progress,#right_progress,#center_progress
 {
   height: 4px;
-  background-color: #e9f6e9;
+  background-color: $vert;
 }
 
 #right_progress div, #center_progress div, #left_progress div
 {
     height: 100%;
     width: 0;
-    background-color: $vert;  
+
 }
 
 #left_progress
@@ -133,6 +133,27 @@ a
 {
     
 }
+
+#progress_right
+{
+  float: left;
+  display: none;
+  position: relative;
+  top: 10%;
+  left: 55%;
+  margin: -100% 0px 0px -10%;
+}
+
+
+#progress_center
+{
+  float: left;
+  display: none;
+  position: relative;
+  top: -55%;
+  left: 50%;
+}
+
 #left_direction, #right_direction
 {
   position:absolute;
