--- a/src/Members/Bundle/ManagementBundle/Resources/views/AdminInitial/adminInitial.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/AdminInitial/adminInitial.html.twig
@@ -45,11 +45,17 @@
             <div id="center">
                 {% include "MembersManagementBundle:AdminInitial:adminCenterInitial.html.twig" %}
             </div>
+            <div id="progress_center">
+                <img src="{{ asset('images/loading.gif')}}" />
+            </div>
         </div>
         <div id="right_container">
             <div id="right_progress"><div></div></div>
             <div id="right">
                 {% include "MembersManagementBundle:AdminInitial:adminRightInitial.html.twig" %}
+            </div>
+            <div id="progress_right">
+                <img src="{{ asset('images/loading.gif')}}" />
             </div>
        </div>
        <div id="chatters_container"></div>
