--- a/src/Members/Bundle/ManagementBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Profile/show_content.html.twig
@@ -2,7 +2,7 @@
 
 <div class="fos_user_user_show" data-latitude="{{ user.latitude }}" data-longitude="{{ user.longitude }}">
     <div class="profile_picture">
-      <img class="photo"  src="{{ prefix ~ profile_url }}" width="60"/>
+      <img class="photo"  src="{{ prefix }}" width="60"/>
     </div>
     
     <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
