--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
@@ -40,7 +40,7 @@
 <div class="logout-and-settings">
     <div class="my_settings">            
         <a href="javascript:void(0);" class="show_my_profile" data-url="{{path('fos_user_profile_show')}}">
-           {# {{ 'menu.my_settings'| trans}} #}
+           {{ 'menu.my_settings'| trans}}
         </a>
     </div>
     <div class="logout">
