--- a/src/FrontEnd/scss/dashboard_styles/dashboard_styles_main.scss
+++ b/src/FrontEnd/scss/dashboard_styles/dashboard_styles_main.scss
@@ -163,7 +163,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     opacity: 0.8;
 }
 
-#progress_right
+#progress_right, #progress_left
 {
   float: left;
   display: none;
