--- a/src/FrontEnd/scss/dashboard_styles/left_styles.scss
+++ b/src/FrontEnd/scss/dashboard_styles/left_styles.scss
@@ -1,3 +1,4 @@
+$rouge: #c1272d;
 
 #left_context
 {  
@@ -29,8 +30,7 @@
     height: 60px + 2px;
     width: 100%; 
     border-top: 1px solid rgba(0,98,51,0.2);
-    margin-top: 2px; 
-    
+    margin-top: 2px;
 }
 
 #left-context-articles-from
@@ -45,4 +45,61 @@
     color: white;
     border-radius: 2%;
     padding: 0 5px 0 10px;
+}
+
+#profile_picture_block
+{
+    margin: 10px 0 4px 0;
+}
+#change_profile_picture_trigger
+{
+    color: $vert;
+    font-size: 11px;
+    width: 50%;
+    display: block;
+    float:left;
+    text-align: center;
+}
+
+#delete_profile_picture_trigger
+{
+    color: $rouge;
+    font-size: 11px;
+    width: 50%;
+    display: block;
+    float:right;
+    text-align: right;
+}
+
+#profile_picture
+{
+    margin: 10px auto;
+    display: block;
+}
+
+#deactivate_my_profile
+{
+    background-color: $rouge;
+    color: white;
+    width: 90%;
+    text-align: center;
+    display: block;
+    margin: 70px auto 0;
+    padding: 3px;
+
+}
+
+.title_in_profile
+{
+    font-size: 10px;
+    margin-bottom: 0;
+
+}
+
+.content_in_profile
+{
+    font-size: 13px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 0;
 }
